--- a/italian/italian.html
+++ b/italian/italian.html
@@ -11,7 +11,8 @@
     <img src="image/italy.jpeg">
     <h2>About This Dish</h2>
     <p>Beef and cheese filled tortillas are baked in a creamy, Italian-style sause.</p>
-    <ul>Ingredients
+    <h3>Ingredients</h3>
+    <ul>
         <li>2 pounds ground beef</li>
         <li>1 large onion, chopped</li>
         <li>2 (10.75 ounce) cans condensed cream of mushroom soup, undiluted</li>
@@ -21,7 +22,8 @@
         <li>¾ cup water</li>
         <li>20 (10 inch) flour tortillas</li>
     </ul>
-    <ol>Directions
+    <h3>Directions</h3>
+    <ol>
         <li><spin>Step 1:</spin> Preheat oven to 350 degrees F (175 degrees C).</li>
         <li><spin>Step 2:</spin> Place the ground beef and onion in a skillet over medium heat. Cook and stir until beef is evenly brown and onion is tender. Drain grease. Mix in soup, and continue cooking until heated through.</li>
         <li><spin>Step 3:</spin> lace the ground beef and onion in a skillet over medium heat. Cook and stir until beef is evenly brown and onion is tender. Drain grease. Mix in soup, and continue cooking until heated through.</li>
