Made some small changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 id = header>Food From All Around The World!</h1>
     <img src="main-images/global.jpg" alt="food table">
-    <h3>Pick Your favourite</h3>
+    <h3>Pick Your Favourite</h3>
     <ul>
     <li><a href="asian/asian.html">Asian Food</a></li>
     <li><a href="italian/italian.html">Italian Food</a></li>
