--- a/italian/italian.html
+++ b/italian/italian.html
@@ -24,10 +24,10 @@
     </ul>
     <h3>Directions</h3>
     <ol>
-        <li><spin>Step 1:</spin> Preheat oven to 350 degrees F (175 degrees C).</li>
-        <li><spin>Step 2:</spin> Place the ground beef and onion in a skillet over medium heat. Cook and stir until beef is evenly brown and onion is tender. Drain grease. Mix in soup, and continue cooking until heated through.</li>
-        <li><spin>Step 3:</spin> lace the ground beef and onion in a skillet over medium heat. Cook and stir until beef is evenly brown and onion is tender. Drain grease. Mix in soup, and continue cooking until heated through.</li>
-        <li><spin>Step 4:</spin> Cover with aluminum foil, and bake 45 minutes in the preheated oven, until bubbly.</li>
+        <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+        <li>Place the ground beef and onion in a skillet over medium heat. Cook and stir until beef is evenly brown and onion is tender. Drain grease. Mix in soup, and continue cooking until heated through.</li>
+        <li>lace the ground beef and onion in a skillet over medium heat. Cook and stir until beef is evenly brown and onion is tender. Drain grease. Mix in soup, and continue cooking until heated through.</li>
+        <li>Cover with aluminum foil, and bake 45 minutes in the preheated oven, until bubbly.</li>
     </ol>
     <h5><a href="../index.html">Back to Homepage</h5>
 </body>
