--- a/asian/asian.html
+++ b/asian/asian.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Asian Noodle Bowl</h1>
     <img src="image/asian-dish.jpeg" alt="asian noodle bowl">
-    <h2>About This Dish</h2>
-    <p>Tneder slices of broiled bison skirt steak are sesrved atop steaming bowls of Asian-inspired noodle soup with veggies and your choice of oppings.</p>
-    <h3>Ingredients</h3>
+    <div class="container"><h2>About This Dish</h2>
+    <p>Tender slices of broiled bison skirt steak are sesrved atop steaming bowls of Asian-inspired noodle soup with veggies and your choice of oppings.</p>
+</div>
+    
+<div class="list">
+<h3>Ingredients</h3>
     <ul>
         <li>1 pound bison skirt steak or bison ribeye steak</li>
         <li>2 tablespoons soy sauce</li>
@@ -27,13 +31,16 @@
         <li>1 teaspoon Asian chili sauce (Sriracha sauce)</li>
         <li>1 teaspoon Soy sauce</li>
     </ul>
+</div>
+<div class="dir">
     <h3>Directions</h3>
     <ol>
         <li>Preheat broiler. Place bison skirt steak on the unheated rack of a broiler pan. Brush both sides of bison skirt steak with the 2 tablespoons soy sauce. Broil 4 to 5 inches from the heat for 5 to 6 minutes or until an instant-read thermometer registers 145 degrees F, turning once. Cover with foil and let stand for 10 minutes.</li>
         <li>Meanwhile, bring broth and water to boiling over medium-high heat in a large saucepan. Add vermicelli noodles and cook, uncovered, for 3 minutes or until noodles are tender. Use kitchen scissors to snip the noodle strands into smaller pieces. Stir in peanut sauce, broccoli, and carrots. Remove from heat. Cover and let stand for 10 minutes.</li>
         <li>Thinly slice bison skirt steak against the grain into bite-size pieces. Divide noodle mixture among 4 bowls. Top with bison skirt steak pieces. Sprinkle with peanuts and green onions or cilantro. If desired, serve with Asian chili sauce and additional soy sauce.</li>
     </ol>
-    <h5><a href="../index.html">Back to Homepage</h5>
+</div>
+    <button><a href="../index.html">Back to Homepage</button>
         
 </body>
 </html>
