--- a/canadian/canadian.html
+++ b/canadian/canadian.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Canadian Poutine</h1>
     <img src="image/Canadian Poutine.jpg">
-    <h2>About This Dish</h2>
-    <p>Learn how to make real poutine at home with my Authentic Canadian Poutine Recipe. I will show you how to make it, as well as explaining exactly what exactly poutine is, for the uninitiated.</p>
+    <div class="container">
+        <h2>About This Dish</h2>
+        <p>Learn how to make real poutine at home with my Authentic Canadian Poutine Recipe. I will show you how to make it, as well as explaining exactly what exactly poutine is, for the uninitiated.</p>
+    </div>
+    <div class="list">
     <h3>Ingredients</h3>
     <ul>
         <li>3 Tbsp cornstarch</li>
@@ -24,6 +28,8 @@
         <li>Peanut or other frying oil</li>
         <li>1 - 1 1/2 cups white cheddar cheese curds</li>
     </ul>
+</div>
+    <div class="dir">
     <h3>Directions</h3>
     <ol>
         <li>Prepare the gravy: In a small bowl, dissolve the cornstarch in the water and set aside.</li>
@@ -42,7 +48,8 @@
 
         <li>Add the cheese curds and toss with the hot fries and gravy. Serve with freshly ground pepper. Serve immediately.</li>
     </ol>
-    <h5><a href="../index.html">Back to Homepage</h5>
+</div>
+    <button><a href="../index.html">Back to Homepage</button>
 
 </body>
 </html>
