--- a/italian/italian.html
+++ b/italian/italian.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Italian Enchiladas</h1>
     <img src="image/italy.jpeg">
-    <h2>About This Dish</h2>
-    <p>Beef and cheese filled tortillas are baked in a creamy, Italian-style sause.</p>
+    <div class="container">
+        <h2>About This Dish</h2>
+        <p>Beef and cheese filled tortillas are baked in a creamy, Italian-style sause.</p>
+    </div>
+    <div class="list">
     <h3>Ingredients</h3>
     <ul>
         <li>2 pounds ground beef</li>
@@ -22,6 +27,8 @@
         <li>¾ cup water</li>
         <li>20 (10 inch) flour tortillas</li>
     </ul>
+</div>
+    <div class="dir">
     <h3>Directions</h3>
     <ol>
         <li>Preheat oven to 350 degrees F (175 degrees C).</li>
@@ -29,6 +36,7 @@
         <li>lace the ground beef and onion in a skillet over medium heat. Cook and stir until beef is evenly brown and onion is tender. Drain grease. Mix in soup, and continue cooking until heated through.</li>
         <li>Cover with aluminum foil, and bake 45 minutes in the preheated oven, until bubbly.</li>
     </ol>
-    <h5><a href="../index.html">Back to Homepage</h5>
+</div>
+    <button><a href="../index.html">Back to Homepage</button>
 </body>
 </html>
