--- a/mexican/mexican.html
+++ b/mexican/mexican.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Beef Tacos</h1>
     <img src="image/Tacos.jpeg">
-    <h2>About This Dish</h2>
-    <p>Taking just a little extra time to make this flavorful ground beef makes all the difference in your homemade tacos!</p>
+    <div class="container">
+        <h2>About This Dish</h2>
+        <p>Taking just a little extra time to make this flavorful ground beef makes all the difference in your homemade tacos!</p>
+    </div>
+    <div class="list">
     <h3>Ingredients</h3>
     <ul>
         <li>2 teaspoons dried minced onion</li>
@@ -27,12 +31,15 @@
         <li>1 pound ground beef</li>
         <li>½ cup water</li>
     </ul>
+</div>
+<div class="dir">
     <h3>Directions</h3>
     <ol>
         <li>Mix minced onion, salt, chili powder, cornstarch, cumin, red pepper flakes, cayenne pepper, dried minced garlic, and oregano in a bowl.</li>
         <li>Heat a large skillet over medium-high heat. Crumble ground beef into the hot skillet. Cook and stir until the beef is completely browned, 7 to 10 minutes. Drain and discard any excess grease.</li>
         <li>Return ground beef to heat. Pour seasoning mixture and water over the beef; stir to combine. Bring to a simmer and cook until the moisture absorbs into the meat, about 5 minutes.</li>
     </ol>
-<h5><a href="../index.html">Back to Homepage</h5>
+</div>
+<button><a href="../index.html">Back to Homepage</button>
 </body>
 </html>
