--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    
     <h1 id = header>Food From All Around The World!</h1>
     <img src="main-images/global.jpg" alt="food table">
-    <h3>Pick Your Favourite</h3>
+    <div class="container">
+        <h2>Pick Your Favourite</h2>
+    </div>
+    <div class="list">
     <ul>
     <li><a href="asian/asian.html">Asian Food</a></li>
     <li><a href="italian/italian.html">Italian Food</a></li>
     <li><a href="mexican/mexican.html">Mexican Food</a></li>
     <li><a href="canadian/canadian.html">Canadian Food</a></li>
     </ul>
-    
-    <h5><a href="#header">Back to Top</h5>
+</div>
+    <button><a href="#header">Back to Top</button>
 </body>
 </html>
